# LocalStore

./: .gitignore  CONTRIBUTING.md  DatasetConverter.md  LICENSE  LocalAPI.md  LocalStore.md  README.md  main.py  pyproject.toml
localstore/: Dataset.py  DatasetConverter.py  LocalAPI.py  LocalStore.py
tests/: test_DatasetConverter.py  test_localstore.py
tests/DATASET/: DATASET.json
